--- a/DictionaryApp/nbproject/project.properties
+++ b/DictionaryApp/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DictionaryApp
 excludes=
+file.reference.dom4j-2.1.4.jar=D:\\Downloads\\dom4j-2.1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.dom4j-2.1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
