--- a/DictionaryApp/nbproject/project.properties
+++ b/DictionaryApp/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DictionaryApp
 excludes=
 file.reference.dom4j-2.1.4.jar=D:\\Downloads\\dom4j-2.1.4.jar
+file.reference.jcalendar-1.4.jar=D:\\Downloads\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.dom4j-2.1.4.jar}
+    ${file.reference.dom4j-2.1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
